# cpaw_hp

./: .env  .gitignore  Cargo.toml  README.md  sqlite3.db
db/dummy/: empty.sql  users.sql
migrations/2017-09-03-124327_create_users_table/: up.sql
scripts/: insert_dummy_data.sh  setup_db.sh
src/: blog.rs  login.rs  main.rs  routing.rs  sql.rs  user.rs
src/templates/: about.hbs  activity.hbs  base.hbs  blog.hbs  index.hbs  login.hbs  new_blog.hbs  random.hbs  register.hbs  timer.hbs  user_update.hbs  users.hbs
src/templates/assets/css/: about.css  activity.css  common.css  index.css  material.css  member.css  register.css  styles.css  timer.css  user.css  user_update.css
src/templates/assets/csv/: member.csv
src/templates/assets/js/: height.js  jquery.csv.js  load.js  login.js  member.js  random.js  register.js  script.js  send_user_info.js  timer.js  user_update.js
